# cbar

./: .gitmodules  Cargo.toml  LICENSE  build.rs  flake.nix  result  rust-toolchain.toml
luadefs/: crabshell.lua  defs.lua  gdk.lua  gio.lua  glib.lua  gtk.lua  hyprland.lua  pulseaudio.lua  sysinfo.lua  utf8.lua  utils.lua  worker.lua
src/: error.rs  macros.rs  main.rs  traits.rs  utils.rs
src/hyprland/: error.rs  event_loop.rs  events.rs  mod.rs
src/hyprland/ipc/: commands.rs  mod.rs
src/luaapi/: enums.rs  gdk.rs  gio.rs  glib.rs  gtk.rs  hyprland.rs  mod.rs  pulseaudio.rs  sysinfo.rs  utf8.rs  utils.rs  wrappers.rs
src/luaapi/json/: conversions.rs  error.rs  mod.rs
src/luaapi/worker/: error.rs  mod.rs  worker.rs
src/system_info/: battery.rs
src/widgets/: active_window.rs  battery.rs  clock.rs  cpu_load.rs  kb_layout.rs  memory_usage.rs  mod.rs  network.rs  workspaces.rs
