[package]
name = "cbar"
version = "0.1.1"
edition = "2021"

[profile.release]
lto = "thin"

[profile.release-with-symbols]
inherits = "release"
lto = "thin"
debug = true

[dependencies]
mlua = { version = "^0.9.0", features = [
    "async",
    "luajit",
    "unstable",
    "serialize",
] }
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
freedesktop-icons = "0.2.3"
futures = "0.3.28"
grass = "0.13.1"
gtk = { version = "=0.6.6", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "=0.0.3"
paste = "1.0.14"
pulse = { version = "2.28.1", package = "libpulse-binding" }
pulse_glib = { version = "2.28.1", package = "libpulse-glib-binding" }
serde = { version = ">=1.0.184", features = ["derive"] }
serde_json = "1.0.105"
sysinfo = "0.29.8"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["sync"] }
