[package]
name = "crabshell"
version = "1.3.5"
edition = "2021"

[profile.release]
lto = "thin"

[profile.release-with-symbols]
inherits = "release"
lto = "thin"
debug = true

[dependencies]
mlua = { version = "^0.9.2", features = [
    "async",
    "luajit",
    "unstable",
    "serialize",
] }
mlua-sys = { version = "0.4.0", features = ["luajit"] }
chrono = "^0.4.0"
clap = { version = "^4.3.0", features = ["derive"] }
freedesktop-icons = "^0.2.0"
futures = "^0.3.0"
grass = "^0.13.0"
gtk = { version = "^0.7", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "^0.2"
paste = "^1.0.0"
pulse = { version = "2.28.1", package = "libpulse-binding" }
pulse_glib = { version = "2.28.1", package = "libpulse-glib-binding" }
serde = { version = ">=1.0.184", features = ["derive"] }
serde_json = "^1.0.0"
sysinfo = "^0.29.0"
thiserror = "^1.0.0"
tokio = { version = "^1.34.0", features = ["sync"] }
regex = "^1.10.0"
async-channel = "^2.1.0"
